--- a/index.html
+++ b/index.html
@@ -137,7 +137,16 @@
           </div>
           <div id="products">
             <div class="container-fluid p-0">
-                <div class="row g-0">
+                <div class="row g-0 d-flex justify-content-center">
+
+                  <div class="col-auto">
+                      <a class="product-box" href="#products">
+                          <img class="img-fluid" src="products/drums.jpg" alt="..." />
+                          <div class="product-box-caption">
+                              <div class="type-name text-white text-uppercase"><h2>Basses</h2></div>
+                          </div>
+                      </a>
+                  </div>
                   <div class="col-auto">
                       <a class="product-box" href="#products">
                           <img class="img-fluid" src="products/drums.jpg" alt="..." />
@@ -146,6 +155,43 @@
                           </div>
                       </a>
                   </div>
+
+                  <div class="col-auto">
+                      <a class="product-box" href="#products">
+                          <img class="img-fluid" src="products/drums.jpg" alt="..." />
+                          <div class="product-box-caption">
+                              <div class="type-name text-white text-uppercase"><h2>Guitars</h2></div>
+                          </div>
+                      </a>
+                  </div>
+
+                  <div class="col-auto">
+                      <a class="product-box" href="#products">
+                          <img class="img-fluid" src="products/keyboards.jpg" alt="..." />
+                          <div class="product-box-caption">
+                              <div class="type-name text-white text-uppercase"><h2>Keyboards</h2></div>
+                          </div>
+                      </a>
+                  </div>
+
+                  <div class="col-auto">
+                      <a class="product-box" href="#products">
+                          <img class="img-fluid" src="products/winds.jpg" alt="..." />
+                          <div class="product-box-caption">
+                              <div class="type-name text-white text-uppercase"><h2>Brass & Woodwind</h2></div>
+                          </div>
+                      </a>
+                  </div>
+
+                  <div class="col-auto">
+                      <a class="product-box" href="#products">
+                          <img class="img-fluid" src="products/drums.jpg" alt="..." />
+                          <div class="product-box-caption">
+                              <div class="type-name text-white text-uppercase"><h2>Drums</h2></div>
+                          </div>
+                      </a>
+                  </div>
+                
               </div>
             </div>
           </div>
