--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                 <a href="collection.html" class="btn btn-primary rounded-0 mt-2">
                   <div class="d-flex align-items-center text-white fw-bold">
                     CHECK OUR LOCATIONS
-                    <i class="large material-icons" id="arrow-right" style="font-size: 1.5rem; color:rgb(255, 255, 255)">chevron_right</i></div>
+                    <i class="large material-icons" id="arrow-right" style="font-size: 1.5rem; color:rgb(255, 255, 255)">chevron_right</i>
+                  </div>
                 </a>
               </div>
               <div class="carousel-item">
