--- a/navbar.html
+++ b/navbar.html
@@ -13,8 +13,8 @@
         <li class="nav-item dropdown">
           <a class="nav-link fw-bold dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">PRODUCTS</a>
           <ul class="dropdown-menu rounded-0" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="products.html">ALL PRODUCTS</a></li>
-            <li><a class="dropdown-item" href="products.html">COLLECTIONS</a></li>
+            <li><a class="dropdown-item" href="products.php">ALL PRODUCTS</a></li>
+            <li><a class="dropdown-item" href="products.php">COLLECTIONS</a></li>
           </ul>
         </li>
         <li class="nav-item">
