Client side's functions done. Waiting for admin side.

--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid secondary-med">
     <a class="navbar-brand" href="index.html">
       HIBIKE
     </a>
@@ -21,19 +21,19 @@
           <a class="nav-link fw-bold" href="#carousel-introduction">ABOUT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fw-bold" href="#service">CONTACT</a>
+          <a class="nav-link fw-bold" href="contact.html">CONTACT</a>
         </li>
       </ul>
 
       <div class="icons d-flex">
-        <a href="#">
-          <i class="large material-icons" style="font-size: 1.8rem">location_on</i>
+        <a href="contact.html">
+          <i class="bi-send material-icons" style="font-size: 1.6rem"></i>
         </a>
-        <a href="#">
-          <i class="large material-icons" style="font-size: 1.8rem">shopping_basket</i>
+        <a href="order_confirm.php">
+          <i class="bi-bag-check material-icons" style="font-size: 1.6rem"></i>
         </a>
-        <a href="#">
-          <i class="large material-icons" style="font-size: 1.8rem">assignment_ind</i>
+        <a href="login.php">
+          <i class="bi-person-circle material-icons" style="font-size: 1.8rem"></i>
         </a>
       </div>
     </div>
