Function almost done

--- a/order_success.html
+++ b/order_success.html
@@ -22,8 +22,10 @@
 
         </nav>    
 
-        
-        <footer class="footer bg-white small text-center text-black-50">
+        <section id="success_message">
+              
+        </section>
+        <footer class="footer small text-center text-black-50">
         </footer>
     </body>
 </html>
