--- a/navbar.html
+++ b/navbar.html
@@ -25,14 +25,14 @@
         </li>
       </ul>
 
-      <div class="icons d-flex">
+      <div class="icons d-flex align-items-center">
         <a href="contact.html">
           <i class="bi-send material-icons" style="font-size: 1.6rem"></i>
         </a>
         <a href="order_confirm.php">
           <i class="bi-bag-check material-icons" style="font-size: 1.6rem"></i>
         </a>
-        <a href="login.php">
+        <a href="login.php" a target="_blank" rel="noopener noreferrer">
           <i class="bi-person-circle material-icons" style="font-size: 1.8rem"></i>
         </a>
       </div>
