--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,4 @@
-<div class="container-fluid secondary-med">
+<div class="container secondary-med px-lg-3 d-flex align-text-center">
     <a class="navbar-brand" href="index.html">
       HIBIKE
     </a>
@@ -12,13 +12,13 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link fw-bold dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">PRODUCTS</a>
-          <ul class="dropdown-menu rounded-0" aria-labelledby="navbarDropdown">
+          <ul class="dropdown-menu border-0 bg-white" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="products.php">ALL PRODUCTS</a></li>
             <li><a class="dropdown-item" href="products.php">COLLECTIONS</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link fw-bold" href="#carousel-introduction">ABOUT</a>
+          <a class="nav-link fw-bold" href="about.html">ABOUT</a>
         </li>
         <li class="nav-item">
           <a class="nav-link fw-bold" href="contact.html">CONTACT</a>
