--- a/footer.html
+++ b/footer.html
@@ -4,6 +4,7 @@
     <a href="https://youtu.be/dQw4w9WgXcQ" a target="_blank" rel="noopener noreferrer" title="facebook"><i class="bi-facebook mx-2" style="font-size: 2rem; color: rgb(255, 255, 255);"></i></a>
     <a href="https://youtu.be/dQw4w9WgXcQ" a target="_blank" rel="noopener noreferrer" title="instagram"><i class="bi-instagram mx-2" style="font-size: 2rem; color: rgb(255, 255, 255);"></i></a>
     <a href="https://twitter.com/hibike_store_GB" a target="_blank" rel="noopener noreferrer" title="twitter"><i class="bi-twitter mx-2" style="font-size: 2rem; color: rgb(255, 255, 255);"></i></a>
+    <a href="https://github.com/lunarpham/hibike-rebuild" a target="_blank" rel="noopener noreferrer" title="twitter"><i class="bi-github mx-2" style="font-size: 2rem; color: rgb(255, 255, 255);"></i></a>    
 </div>
 <div class="divider d-flex justify-content-center mb-3">
     <div class="divider-bottom"></div>
