--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
     crossorigin="anonymous"></script>
   <link href="css/styles.css" rel="stylesheet">
-  <script src="js/scripts.js" defer="sync"></script>
+  <script src="js/scripts.js"></script>
 </head>
 
 <body id="page-top">
@@ -28,7 +28,7 @@
   </nav>
 
   <!--Website Banner-->
-  <header class="masthead">
+  <header class="header-banner">
     <div class="container d-flex flex-column h-100 align-items-center justify-content-center" id="start-text">
       <div class="d-flex justify-content-center">
         <div class="text-center mt-5 mt-lg-5">
@@ -38,7 +38,7 @@
             culture! </h2>
         </div>
       </div>
-      <a href="#" class="btn-transparent rounded-3 px-4 py-2 link-underline link-underline-opacity-0 text-uppercase">
+      <a href="products.php" class="btn-transparent rounded-3 px-4 py-2 link-underline link-underline-opacity-0 text-uppercase">
         <h4 class="mb-0 primary-bold">Discover now</h4>
       </a>
     </div>
