--- a/navbar.html
+++ b/navbar.html
@@ -32,7 +32,7 @@
         <a href="order_confirm.php">
           <i class="bi-bag-check material-icons" style="font-size: 1.6rem"></i>
         </a>
-        <a href="login.php" a target="_blank" rel="noopener noreferrer">
+        <a href="admin.php" a target="_blank" rel="noopener noreferrer">
           <i class="bi-person-circle material-icons" style="font-size: 1.8rem"></i>
         </a>
       </div>
