--- a/policy.html
+++ b/policy.html
@@ -15,8 +15,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
       integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
       crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
     <link href="css/styles.css" rel="stylesheet">
-    <script src="js/scripts.js" defer="sync"></script>
+    <script src="js/scripts.js"></script>
 </head>
 <body id="page-top">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top nav-default" id="mainNav">
@@ -32,31 +33,31 @@
         </div>
         <div class="container">
             <div id="accordion">
-            <div class="rounded-3 bg-white border-pink primary-bold" style="color: #444;">Shipping</div>
-            <div class="rounded-bottom-3 bg-white border-pink primary-reg">
+            <div class="rounded-3 bg-white border-pink primary-bold p-2" style="color: #444;">Shipping</div>
+            <div class="rounded-bottom-3 bg-white border-pink primary-reg p-2">
               <p>
                 Shipping amounts are calculated using carrier rates and will be shown during the checkout process.
                 All orders are shipped Monday - Friday. We are unable to ship orders to P.O. boxes or APO/FPO addresses.
                 For orders containing instruments, a signature will be required upon delivery.
               </p>
             </div>
-            <div class="rounded-3 bg-white border-pink primary-bold mt-3" style="color: #444;">Sales Tax</div>
-            <div class="rounded-bottom-3 bg-white border-pink primary-reg">
+            <div class="rounded-3 bg-white border-pink primary-bold mt-3 p-2" style="color: #444;">Sales Tax</div>
+            <div class="rounded-bottom-3 bg-white border-pink primary-reg p-2">
               <p>
                 We are required to collect sales tax for orders shipping to certain South East Asia destinations.
                 The tax amount paid is based on the shipping address and will be presented during the checkout process.
               </p>
             </div>
-            <div class="rounded-3 bg-white border-pink primary-bold mt-3" style="color: #444;">Order Change or Cancellation</div>
-            <div class="rounded-bottom-3 bg-white border-pink primary-reg">
+            <div class="rounded-3 bg-white border-pink primary-bold mt-3 p-2" style="color: #444;">Order Change or Cancellation</div>
+            <div class="rounded-bottom-3 bg-white border-pink primary-reg p-2">
               <p>
                 In order to make changes to or cancel an order, it must be within 24 hours of placing the initial order
                 and standard shipping must be selected as the shipping option. If the order meets these criteria, please contact us.
                 We work hard to ship orders as fast as possible so it may not always be possible to cancel an order.
               </p>
             </div>
-            <div class="rounded-3 bg-white border-pink primary-bold mt-3" style="color: #444;">Returns & Exchanges</div>
-            <div class="rounded-bottom-3 bg-white border-pink primary-reg">
+            <div class="rounded-3 bg-white border-pink primary-bold mt-3 p-2" style="color: #444;">Returns & Exchanges</div>
+            <div class="rounded-bottom-3 bg-white border-pink primary-reg p-2">
               <p>
                 If you are not 100% completely satisfied with your purchase,
                 return it within 30 days of the invoice date for a full refund of the product purchase price,
@@ -68,8 +69,8 @@
                 Must be in brand new, original condition and show no signs of wear or use including, but not limited to, pick scratches, belt-buckle scratches, scuffs, dings or scrapes on the instrument, case, or collateral materials. Guitars must also include all original packaging, cases, manuals, warranties, certificates, and accessories that were included with the original purchase or your return may be subject to a return handling charge or a minimum 15% restocking fee for returns that are not in original brand new condition. Your refund will be quickly processed once we confirm that your returned item meets these requirements.
               </p>
             </div>
-            <div class="rounded-3 bg-white border-pink primary-bold mt-3" style="color: #444;">Damaged Orders</div>
-            <div class="rounded-bottom-3 bg-white border-pink primary-reg">
+            <div class="rounded-3 bg-white border-pink primary-bold mt-3 p-2" style="color: #444;">Damaged Orders</div>
+            <div class="rounded-bottom-3 bg-white border-pink primary-reg p-2">
               <p>
                 If possible do not accept the order and the mail delivery service will return it to us,
                 at which point a new product will be sent to you.
